added weather icons

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Mayheam</title>
 </head>
 <body>
+    <!-- <img id="lo" src="icons/weather.gif" style="margin:auto;text-align:center"/> -->
     <div id="root"></div>
     <script src='/bundle.js'></script>
 </body>
