--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
 <body>
     <!-- <img id="lo" src="icons/weather.gif" style="margin:auto;text-align:center"/> -->
     <div id="root"></div>
-    <script src='/bundle.js'></script>
+    <script src='../app.js'></script>
 </body>
 </html>
